--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="./styles/index.css">
-  <script src="./scripts/index.js"></script> 
+  <script defer src="./scripts/index.js"></script> 
   
   <title>Frontend Mentor | Contact form</title>
 
