Optimized with TageName selector

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
           </div>          
         </div>
-        <p class="required-query-radio" id="query-label">Please select a query type</p>
+        <p class="required" id="query-label">Please select a query type</p>
         
         <label for="message">Message</label>
         <input type="text" name="message-text" id="message" required>
@@ -65,7 +65,7 @@
           <input type="checkbox" name="consent-text" id="consent-form-check" required>
           <label for="consent-form-check">I consent to being contacted by the team </label>          
         </div>
-        <p class="required-consent-form" id="consent-label">To submit this form, please consent to being contacted</p>
+        <p class="required" id="consent-label">To submit this form, please consent to being contacted</p>
 
         <input type="button" class="submit-button" value="Submit" id="submit-button">
         <!-- type='submit' if actual request -->
