--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <script defer src="./scripts/index.js"></script> 
   
   <title>Frontend Mentor | Contact form</title>
-
-
+  
 </head>
 <body>    
     <form class="form-container" name="main">
@@ -58,7 +57,7 @@
         <textarea name="message-text" id="message" required></textarea>
           <p class="required" id="message-label">This field is required</p>
 
-        <div class="checbox-wrapper">
+        <div class="checkbox-wrapper">
           <input type="checkbox" name="consent-text" id="consent-form-check" required>
           <label for="consent-form-check">I consent to being contacted by the team </label>          
         </div>
@@ -78,7 +77,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/prophesierc">Your Name Here</a>.
   </div>
 </body>
 </html>
